--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&family=League+Spartan:wght@100..900&display=swap"
       rel="stylesheet">
-    <title>Frontend Mentor | Planets fact site</title>
+    <title>Planets fact site</title>
   </head>
   <body>
     <div id="root"></div>
